tests/error/spork_non_func.gw
#! [contains] only function calls can be sporked
var int i;
<<< i >>>;
spork i;
